Patch CustomAccumulator never working with registration